# agg

./: README.md  requirements.txt
.github/workflows/: ci-cmake.yml  ci-conan.yml
agg-src/: CMakeLists.txt  conanfile.py  conanfile.txt  configure.ac
agg-src/agg2d/: CMakeLists.txt  agg2d.cpp  agg2d.h
agg-src/examples/: CMakeLists.txt
agg-src/examples/X11/: Makefile
agg-src/examples/macosx_sdl/: Makefile
agg-src/font_freetype/: CMakeLists.txt  agg_font_freetype.cpp  agg_font_freetype2.cpp
agg-src/font_win32_tt/: agg_font_win32_tt.cpp  agg_font_win32_tt.h
agg-src/gpc/: CMakeLists.txt  gpc.c
agg-src/include/: agg_basics.h  agg_line_aa_basics.h  agg_math_stroke.h  agg_rasterizer_cells_aa.h  agg_renderer_outline_aa.h  agg_scanline_storage_aa.h
agg-src/myapp/: CMakeLists.txt  agg2d_demo.cpp  myproject.cmake
agg-src/src/: CMakeLists.txt  agg_arrowhead.cpp  agg_gsv_text.cpp  agg_rounded_rect.cpp  agg_trans_double_path.cpp  agg_vcgen_contour.cpp  agg_vcgen_dash.cpp  agg_vcgen_stroke.cpp
agg-web/__code/include/: agg_scanline_u.h.html
agg-web/tips/image_plg/: image_plg.agdoc.html
